--- a/configs/yyzz.yaml
+++ b/configs/yyzz.yaml
@@ -1,23 +1,23 @@
 TEXT:
     SAMPLE:
-        SAMPLE_SIZE: {'corpus': 200,'date': 10,'number': 10,'sub_address': 10,'id': 10,'eng_char': 10}
+        SAMPLE_SIZE: {'corpus': 200,'date': 10,'number': 10,'sub_address': 10,'id': 10,'eng_char': 10}  # 数量（万）
         WORD_LENGTH: [12, 12]   # 字符长度
-        CHAR_SET: '/Users/Desperado/Desktop/工作文件夹/gitcode/SynthChinese/data/chars/chn.txt'        # 字符集文件
-        CHAR_MAX_AMOUNT: 100000   #  字符停用阈值
-        CHAR_MIN_AMOUNT: 200    # 字符最少次数，用于supply_uncommon
+        CHAR_SET: 'data/chars/chn.txt'        # 字符集文件
+        CHAR_MAX_AMOUNT: 100000   #  字符最大使用次数，达到后停用
+        CHAR_MIN_AMOUNT: 200    # 字符最小使用次数，不足时补充
     CORPUS:
-        CORPUS_DIR: '/Users/Desperado/Desktop/工作文件夹/gitcode/SynthChinese/data/corpus'  # 语料目录
-        CORPUS_TYPE: {'sogou_news.txt': 'article', 'address.txt': 'list'}   # 语料类型
-        CORPUS_WEIGHT: {'sogou_news.txt': 0.9, 'address.txt': 0.1}    # 语料权重
+        CORPUS_DIR: 'data/corpus'  # 语料目录
+        CORPUS_TYPE: {'sogo_news.txt': 'article', 'address.txt': 'list'}   # 语料类型，不指定时默认为article
+        CORPUS_WEIGHT: {"sogo_news.txt": 0.95, 'address.txt': 0.05}    # 语料权重，不指定时默认相同
 
 BACKGROUND:
-    DIR: '/Users/Desperado/Desktop/工作文件夹/gitcode/SynthChinese/data/background'  # 背景目录
+    DIR: 'data/background'  # 背景目录
     SIZE: [32, 400]   # 最终图片大小
 
 EFFECT:
     PYGAME:
         FONTS:
-            fonts_dir: '/Users/Desperado/Desktop/工作文件夹/gitcode/SynthChinese/data/fonts'
+            fonts_dir: 'data/fonts'
             fonts_prob:
                 # 中文字体
                 SIMFANG.TTF: 0.2  # 仿宋gb2312
@@ -47,22 +47,22 @@ EFFECT:
 
             fonts_strong_false: ['FZSTK.TTF', 'FZYTK.ttf']
         FONT_STYLE:
-            size: [12, 40, 'uniform']  # 字体大小
+            size: [14, 40, 'uniform']  # 字体大小
             oblique: 0.1  # 倾斜
-            rotation: [0.1, [-10, 10,'uniform']]  # 旋转
+            rotation: [0.1, [-5, 5,'uniform']]  # 旋转
             strong: 0.1  # 加粗
-            wide: 0.1  # 加宽
+            wide: 0.01  # 加宽
             strength: [0, 0.1, 'uniform']  # 加粗/加宽的幅度
-            underline: [0.5, [0, 2, 'uniform']]  # 下划线
+            underline: [0.1, [0, 2, 'uniform']]  # 下划线
             fringe: 0   # 模糊
 
     OPENCV:
-        BOX: 0.1
-        PERSPECTIVE: 0.2
+        BOX: 0.1    # 为文字加外边框
+        PERSPECTIVE: 0.2  # 透视变换
         PERSPECTIVE_X: [-25, 25, 'gaussian']   # X轴转动角度
         PERSPECTIVE_Y: [-25, 25, 'gaussian']   # Y轴转动角度
         PERSPECTIVE_Z: [-5, 5, 'gaussian']   # Z轴转动角度
-        BLUR: 0.1
+        BLUR: 0.1   # 高斯模糊
         BLUR_KSIZE: [1,3,5]
         BLUR_SIGMA: [0,1,2,3,4,5,6,7]
         FILTER: [0.1, [0.8, 0.2]]   # filter_prob, emboss_prob, sharp_prob
@@ -72,7 +72,8 @@ EFFECT:
         beta: [-50, 50, 'gaussian']   # 随机调节背景图片的亮度和对比度(a*f(x)+b),调节因子b
         max_ratio: 0.67  # 文字相较背景的最大亮度
         max_height_diff: 10   # resize时文字图像与背景图最大高度差, 最小值为2
-        NOISE: 0.3
+        reverse: 0.2  # 反转最终图像的颜色
+        NOISE: 0.3   # 随机噪点
         NOISE_TYPE: {'gauss':0.1, 'uniform':0.1, 'saltpepper':0.1, 'poisson':0.1}
 
 
