add some feature

--- a/configs/base.yaml
+++ b/configs/base.yaml
@@ -2,12 +2,12 @@ TEXT:
     SAMPLE:
         SAMPLE_SIZE: {'corpus': 150,'date': 50,'number': 20,'sub_address': 20,'id': 20,'eng_char': 20}  # 数量（万）
         WORD_LENGTH: [2, 12]   # 字符长度
+        WORD_LONG: 0.5  # 一定的概率字符长度不再随机，而取WORD_LENGTH中的最大长度
         INSERT_BLANK_PROB: 1     # 当字符长度少于最大长度时用空格补全为最大长度（空格只出现在两字中间）
         CHAR_SET: 'data/chars/chn.txt'        # 字符集文件
         CHAR_MAX_AMOUNT: 50000   #  字符最大使用次数，达到后停用
         CHAR_MAX_SUBSTR: ' '    # 字符停用后的替换字符
         CHAR_MIN_AMOUNT: 500    # 字符最小使用次数，不足时补充
-
     CORPUS:
         CORPUS_DIR: 'data/corpus'  # 语料目录
         CORPUS_TYPE: {'黄金时代.txt': 'article', 'address.txt': 'list'}   # 语料类型，不指定时默认为article。 区别为article类型遇到换行时直接拼接。而list类型语料换行时在行尾添加空格
@@ -24,19 +24,19 @@ EFFECT:
             fonts_dir: 'data/fonts'
             fonts_prob:
                 # 中文字体
-                SIMFANG.TTF: 0.2  # 仿宋gb2312
+                SIMFANG.TTF: 0.3  # 仿宋gb2312
                 simsun.ttc: 0.1  # 仿宋
                 fz-songsan.ttf: 0.1  # 方正宋三
 
-                HanDingJianZhongHei-2.ttf: 0.2   # 汉鼎简中黑
-                SIMHEI.TTF: 0.1 # 黑体
-                heiti.ttf: 0.1 # 黑体
-                MicrosoftYaqiHei-2.ttf: 0.1  # 微软雅旗黑
-                fz-heiti.ttf: 0.1  # 方正黑体
+                HanDingJianZhongHei-2.ttf: 0.1   # 汉鼎简中黑
+                SIMHEI.TTF: 0.05 # 黑体
+                heiti.ttf: 0.05 # 黑体
+                MicrosoftYaqiHei-2.ttf: 0.05 # 微软雅旗黑
+                fz-heiti.ttf: 0.05  # 方正黑体
 
-                SIMKAI.TTF: 0.01  # 楷体GB2312
-                FZSTK.TTF: 0.01  # 方正舒体
-                FZYTK.ttf: 0.01  # 方正姚体
+                SIMKAI.TTF: 0.1  # 楷体GB2312
+                FZSTK.TTF: 0.05  # 方正舒体
+                FZYTK.ttf: 0.05  # 方正姚体
 
                 dl-name1.6.otf: 0.01  #
                 dl-name2.otf: 0.01  #
@@ -51,7 +51,7 @@ EFFECT:
 
             fonts_strong_false: ['FZSTK.TTF', 'FZYTK.ttf']
         FONT_STYLE:
-            size: [15, 40, 'u']  # 字体大小, [min, max, mode], mode: u for uniform, g for gaussian
+            size: [12, 12, 'u']  # 字体大小, [min, max, mode], mode: u for uniform, g for gaussian
             oblique: 0.1  # 倾斜
             rotation: [0.1, [-5, 5,'u']]  # 旋转
             strong: 0.1  # 加粗
@@ -68,16 +68,14 @@ EFFECT:
         BLUR: 0.1   # 高斯模糊
         BLUR_KSIZE: [1,3,5]
         BLUR_SIGMA: [0, 0.5, 1.5]
-        FILTER: [0.1, [0.9, 0.1]]   # filter_prob, emboss_prob, sharp_prob
+        FILTER: [0.01, [0.4, 0.6]]   # filter_prob, emboss_prob, sharp_prob
 
     MERGE:
         RGB: False   # 是否三通道
         alpha: [0.5, 1.5, 'g']  # 随机调节背景图片的亮度和对比度(a*f(x)+b),调节因子a
         beta: [-50, 50, 'g']   # 随机调节背景图片的亮度和对比度(a*f(x)+b),调节因子b
-        font_alpha: [0.4, 1, 'u']  # 文字不透明度
+        font_alpha: [0.2, 1, 'u']  # 文字不透明度
         max_height_diff: 10   # resize时文字图像与背景图最大高度差, 最小值为2
         reverse: 0  # 反转最终图像的颜色
         NOISE: 0.8   # 随机噪点
-        NOISE_TYPE: {'gauss':0.1, 'uniform':0.1, 'saltpepper':0.1, 'poisson':0.1}
-
-
+        NOISE_TYPE: {'gauss':0.1, 'uniform':0.2, 'saltpepper':0.3, 'poisson':0.1}
