--- a/configs/yyzz.yaml
+++ b/configs/yyzz.yaml
@@ -1,17 +1,22 @@
 TEXT:
     SAMPLE:
-        SAMPLE_SIZE: {'corpus': 200,'date': 10,'number': 10,'sub_address': 10,'id': 10,'eng_char': 10}  # 数量（万）
+        SAMPLE_SIZE: {'corpus': 200,'date': 10,'number': 10,'sub_address': 10,'id': 10,'eng_char': 10, 'task':10}  # 数量（万）
         WORD_LENGTH: [2, 12]   # 字符长度
-        INSERT_BLANK_PROB: 0.5    # 当字符长度少于最大长度时用空格补全为最大长度（空格只出现在两字中间）
+        WORD_LONG: 0.85  # 一定的概率字符长度不随机而取WORD_LENGTH中的最大长度
+        INSERT_BLANK_PROB: 0.8    # 当字符长度少于最大长度时用空格补全为最大长度（空格只出现在两字中间）
         CHAR_SET: 'data/chars/key_hc.txt'        # 字符集文件
-        CHAR_MAX_AMOUNT: 50000   #  字符最大使用次数，达到后停用
+        CHAR_MAX_AMOUNT: 500000   #  中文单字符最大使用次数，达到后停用。只对article类型生效
         CHAR_MAX_SUBSTR: ' '    # 字符停用后的替换字符
-        CHAR_MIN_AMOUNT: 500    # 字符最小使用次数，不足时补充
+        CHAR_MIN_AMOUNT: 1000    # 字符最小使用次数，不足时补充
 
     CORPUS:
         CORPUS_DIR: 'data/corpus'  # 语料目录
-        CORPUS_TYPE: {'sogou_news.txt': 'article', 'address.txt': 'list'}   # 语料类型，不指定时默认为article。 区别为article类型遇到换行时直接拼接。而list类型语料换行时在行尾添加空格
-        CORPUS_WEIGHT: {"sogou_news.txt": 0.95, 'address.txt': 0.05}    # 语料权重，不指定时默认相同
+        # 语料类型，不指定时默认为article。
+        # 区别为：- article类型遇到换行时直接拼接。
+        #        - list类型语料换行时在行尾添加空格
+        CORPUS_TYPE: {'sogou_news.txt': 'article', 'address.txt': 'list'}
+        # 语料权重，不指定时默认相同
+        CORPUS_WEIGHT: {"sogou_news.txt": 0.95, 'address.txt': 0.05}
         INFINITE: True    # 为True时可以循环使用语料
 
 BACKGROUND:
@@ -51,33 +56,33 @@ EFFECT:
 
             fonts_strong_false: ['FZSTK.TTF', 'FZYTK.ttf']
         FONT_STYLE:
-            size: [14, 40, 'u']  # 字体大小, [min, max, mode], mode: u for uniform, g for gaussian
-            oblique: 0.1  # 倾斜
+            size: [12, 40, 'u']  # 字体大小, [min, max, mode], mode: u for uniform, g for gaussian
+            oblique: 0.05  # 倾斜
             rotation: [0.1, [-5, 5,'u']]  # 旋转
-            strong: 0.1  # 加粗
+            strong: 0.05  # 加粗
             wide: 0.01  # 加宽
             strength: [0, 0.1, 'u']  # 加粗/加宽的幅度
-            underline: [0.1, [0, 2, 'u']]  # 下划线
+            underline: [0.01, [0, 2, 'u']]  # 下划线
 
     OPENCV:
-        BOX: 0.1    # 为文字加外边框
-        PERSPECTIVE: 0.2  # 透视变换
+        BOX: 0.05    # 为文字加外边框
+        PERSPECTIVE: 0.1  # 透视变换
         PERSPECTIVE_X: [-15, 15, 'g']   # X轴转动角度
         PERSPECTIVE_Y: [-15, 15, 'g']   # Y轴转动角度
         PERSPECTIVE_Z: [-3, 3, 'g']   # Z轴转动角度
         BLUR: 0.1   # 高斯模糊
         BLUR_KSIZE: [1,3,5]
         BLUR_SIGMA: [0, 0.5, 1.5]
-        FILTER: [0.1, [0.9, 0.1]]   # filter_prob, emboss_prob, sharp_prob
+        FILTER: [0.01, [0.4, 0.6]]   # filter_prob, emboss_prob, sharp_prob
 
     MERGE:
-        RGB: False   # 是否三通道
+        RGB: True   # 是否三通道
         alpha: [0.5, 1.5, 'g']  # 随机调节背景图片的亮度和对比度(a*f(x)+b),调节因子a
-        beta: [-50, 50, 'g']   # 随机调节背景图片的亮度和对比度(a*f(x)+b),调节因子b
-        font_alpha: [0.4, 1, 'u']  # 文字不透明度
-        max_height_diff: 10   # resize时文字图像与背景图最大高度差, 最小值为2
+        beta: [-100, 100, 'g']   # 随机调节背景图片的亮度和对比度(a*f(x)+b),调节因子b
+        font_alpha: [0.2, 1, 'u']  # 文字不透明度
+        max_height_diff: 8   # resize时文字图像与背景图最大高度差, 最小值为2
         reverse: 0  # 反转最终图像的颜色
         NOISE: 0.8   # 随机噪点
-        NOISE_TYPE: {'gauss':0.1, 'uniform':0.1, 'saltpepper':0.1, 'poisson':0.1}
+        NOISE_TYPE: {'gauss':0.1, 'uniform':0.2, 'saltpepper':0.3, 'poisson':0.1}
 
 
